# nPerlinNoise

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.pypi.md  README_pypi.md  READMEpypi.md  animations.py  generator.py  generator2.py  main.py  nPerlin.py  perlin.py  pyproject.toml  readme.py  requirements.txt  requirements_dev.txt  setup.py  test.py  test2.py  test3.py  tools.py  zipSrcToAppPublic.py
#gui/: gui2.py
#web/: package-lock.json
#web/public/: index.html
#web/src/Widgets/: Dock.scss
#web/src/components/Tabs/: Tabs.js  Tabs.scss
APP/: index.html  script.js  style.css  style.css.map  style.scss
app/: config-overrides.js  package-lock.json  package.json
app/public/: index.html  py_entry.py
app/src/: App.css  App.css.map  App.js  App.scss  Dock.css  Dock.css.map  Dock.js  Dock.scss  Nav&Foo.css  Nav&Foo.css.map  Nav&Foo.js  Nav&Foo.scss  canvas.css  canvas.css.map  canvas.js  canvas.scss  dock.css  dock.css.map  dock.js  dock.scss  index.js
app/src/Components/: Table.css  Table.css.map  Table.scss  Test.js
app/src/Components/DImg/: DImg.css.map
app/src/Components/Glass/: Glass.scss
app/src/Components/LInp/: LInp.js  Linp.css
app/src/Components/PyLink/: PyLink.css.map  pyToZip.py
app/src/Components/Tabs/: Tabs.css  Tabs.css.map
app/src/Widgets/: Dock.css  Dock.js
app/src/components/DImg/: DImg.css  DImg.js  DImg.scss
app/src/components/Glass/: Glass.css.map
app/src/components/LInp/: Linp.scss
docs/: CHANGELOG.md  README_EMBED.md  TERMS.md
gui/: gui.py  gui2.py  run.py
requirements/: dev_requirements.txt  requirements.txt
scripts/: main.py  readme.py
src/: __init__.py  generator.py  nPerlin.py  nPerlinNoise.py  noise.py  selectionTools.py  tools.py
src/NPerlinNoise/: __init__.py  __main__.py  generator.py  nPerlin.py  noise.py  selectionTools.py
src/nPerlinNoise/: __init__.py  config.toml  generator.py  nPerlin.py  noise.py  selectionTools.py  tools.py
src2/: nPerlin.py  tools.py
tests/: main.py  test.py  test2.py  test3.py  testCol.py  testLogic.py  testProfile.py  testVisuals.py
web/: README.md  next.config.js  package-lock.json  package.json
web/public/: manifest.json
web/src/: App.js
web/src/Widgets/: Dock.css.map  ImgPort.css  ImgPort.js
web/src/components/: Hero.jsx  Layout.jsx  Noise.jsx  noise.scss
web/src/pages/: _app.jsx  changelog.md  coc.md  contribute.md  index.md  license.md  snaps.jsx  terms.md
(+8 files in other folders)
