# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nPerlinNoise"
version = "0.1.3-alpha3"
description = "A robust open source implementation of Perlin Noise Algorithm for N-Dimensions"
readme = "README_EMBED.md"
authors = [{ name = "Amith225", email = "amitharun3@gmail.com" }]
maintainers = [{ name = "Amith225", email = "amitharun3@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "perlin-noise",
    "perlin",
    "n-dimensional",
    "numpy-perlin",
    "numpy-noise",
    "noise",
    "noise-algorithm",
    "performance"
]
dependencies = [
    "numexpr>=2.8.3",
    "numpy>=1.23.3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "matplotlib>=3.6.1",
    "plotly>=5.10.0",
    "PyQt5>=5.15.7",
    "PyQt5-stubs>=5.15.6.0",
    "build>=0.8.0",
    "twine>=4.0.1",
]

[project.urls]
homepage = "https://pypi.org/project/nPerlinNoise/"
repository = "https://github.com/Amith225/nPerlinNoise"
documentation = "https://readthedocs.org/"

[project.scripts]
nPerlinNoise = "nPerlinNoise.__main__:main"
